--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,15 @@ http.connection.timeout: 3000
 http.socket.timeout: 3000
 http.connection-manager.timeout: 3000
 
+hedvig:
+  appleUser:
+    phoneNumber: 0000000000
+    email: apple@hedvig.com
+    address:
+      zipCode: 12345
+      city: California
+      street: Palo Alto
+    firstName: Steve
+    lastName: Jobs
+    personalNumber: 12345
+    memberId: 12345
