add config for apple

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,6 @@ hedvig:
       street: Palo Alto
     firstName: Steve
     lastName: Jobs
-    personalNumber: 12345
-    memberId: 12345
+    personalNumber: 195590930334
+    memberId: 111111111
 
