--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,6 @@ hedvig:
     personalNumber: 195590930334
     memberId: 111111111
 
+graphcms:
+  url: https://api-euwest.graphcms.com/v1/cjmawd9hw036a01cuzmjhplka/master
+
