fixing failing tests

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -9,6 +9,9 @@ hedvig:
   trustly.notification.errorUrl: http://hedvig.com/success
   slack:
     url: ""
+    under:
+      writing:
+        url: ""
 
 cloud:
   aws:
