--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-hedvig-hedvig-java</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/hedvig/hedvig-java</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -45,7 +53,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Greenwich.SR2</version>
+                <version>Greenwich.SR5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -197,7 +205,6 @@
         <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-slf4j</artifactId>
-            <version>9.3.1</version>
         </dependency>
         <!-- AWS -->
         <dependency>
@@ -247,6 +254,11 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hedvig.localization</groupId>
+            <artifactId>localization</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
