--- a/pom.xml
+++ b/pom.xml
@@ -256,9 +256,9 @@
             <version>2.9.7</version>
         </dependency>
         <dependency>
-            <groupId>com.hedvig.localization</groupId>
-            <artifactId>localization</artifactId>
-            <version>1.1.0</version>
+            <groupId>com.hedvig</groupId>
+            <artifactId>lokalise-client</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 
