lokalise configuration useFakes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,3 +54,9 @@ graphcms:
   url: https://api-euwest.graphcms.com/v1/cjmawd9hw036a01cuzmjhplka/master
   project: BotService
 
+---
+spring:
+  profiles: test, development
+
+lokalise:
+  useFakes: true
