--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <kotlin.version>1.3.0</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <byte-buddy.version>1.9.7</byte-buddy.version>
+        <junit-jupiter.version>5.7.0</junit-jupiter.version>
     </properties>
 
     <repositories>
@@ -274,13 +275,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.6.2</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>5.6.2</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -361,6 +362,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dspring.profiles.default=test</argLine>
+                    <runOrder>alphabetical</runOrder>
+                </configuration>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
