take the opportunity to normalize logback conf as well

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 cloud.aws.stack.auto: false
 
 spring:
+  application:
+    name: bot-service
   jpa:
     generate-ddl: true
     properties:
