--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,9 @@
             </snapshots>
         </repository>
         <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-hedvig-hedvig-java</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/hedvig/hedvig-java</url>
+            <id>github</id>
+            <name>Hedvig GitHub Packages</name>
+            <url>https://maven.pkg.github.com/HedvigInsurance/libs</url>
         </repository>
     </repositories>
 
@@ -259,7 +256,7 @@
         <dependency>
             <groupId>com.hedvig</groupId>
             <artifactId>lokalise-client</artifactId>
-            <version>1.0.1</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
