--- a/pom.xml
+++ b/pom.xml
@@ -254,9 +254,9 @@
             <version>2.9.7</version>
         </dependency>
         <dependency>
-            <groupId>com.hedvig</groupId>
-            <artifactId>lokalise-client</artifactId>
-            <version>2.0.2</version>
+            <groupId>com.hedvig.libs</groupId>
+            <artifactId>translations</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
